--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,8 @@
 	autosquash = true
 [core]
 	ignorecase = false
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
