--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,87 @@
 {
-  "workbench.iconTheme": "vscode-icons",
-  "workbench.editorAssociations": {
-    "*.svg": "default"
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "editor.minimap.enabled": false,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[js]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsx]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true
+  },
+  "[python]": {
+    "editor.formatOnType": true
+  },
+  "[ts]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[tsx]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "chat.mcp.discovery.enabled": false,
+  "chat.promptFiles": true,
+  "dart.openDevTools": "flutter",
+  "diffEditor.ignoreTrimWhitespace": false,
+  "diffEditor.maxComputationTime": 0,
   // "editor.acceptSuggestionOnEnter": "off", // 入力候補はEnterではなくタブで入力させる
   "editor.formatOnSave": true,
-  "editor.renderWhitespace": "boundary",
   "editor.inlineSuggest.enabled": true,
-  "security.workspace.trust.untrustedFiles": "open",
+  "editor.minimap.enabled": false,
+  "editor.renderWhitespace": "boundary",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
-  "files.insertFinalNewline": true,
+  "files.associations": {
+    ".env.example": "properties",
+    ".env.local": "properties",
+    ".env.prod": "properties",
+    ".env.stg": "properties"
+  },
   "files.autoSave": "afterDelay",
-  "diffEditor.ignoreTrimWhitespace": false,
-  "hadolint.cliOptions": ["--no-color"],
-  "hadolint.hadolintPath": "/opt/homebrew/bin/hadolint", // brewでinstallしている前提
+  // "files.exclude": {
+  //   "**/.git": false
+  // },
+  "files.insertFinalNewline": true,
   "git.autofetch": true,
+  "git.ignoreRebaseWarning": true,
+  "git.openRepositoryInParentFolders": "never",
+  "github.copilot.chat.codeGeneration.instructions": [
+    {
+      "text": "filesysytem MCPは指示がなければ使用しない"
+    },
+    {
+      "text": "質問された場合は、コードは生成せずに簡潔に回答する"
+    },
+    {
+      "text": "コードの生成を依頼されたらコードを生成する"
+    }
+  ],
+  "github.copilot.enable": {
+    "*": true,
+    "markdown": true,
+    "plaintext": true,
+    "scminput": false,
+    "yaml": false
+  },
+  "github.copilot.nextEditSuggestions.enabled": false,
   "githubPullRequests.pullBranch": "always",
   "githubPullRequests.queries": [
+    {
+      "label": "Local Pull Request Branches",
+      "query": "default"
+    },
     {
       "label": "自分のレビュー待ち",
       "query": "repo:${owner}/${repository} is:open review-requested:${user}"
@@ -30,82 +93,72 @@
     {
       "label": "自分が作成",
       "query": "repo:${owner}/${repository} is:open author:${user}"
+    },
+    {
+      "label": "All Open",
+      "query": "default"
     }
   ],
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  // "files.exclude": {
-  //   "**/.git": false
-  // },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "terminal.integrated.enableMultiLinePasteWarning": "never",
-  "[python]": {
-    "editor.formatOnType": true
-  },
-  "git.openRepositoryInParentFolders": "never",
-  "window.commandCenter": false,
-  "github.copilot.enable": {
-    "*": true,
-    "plaintext": true,
-    "markdown": true,
-    "scminput": false,
-    "yaml": false
-  },
-  "files.associations": {
-    ".env.example": "properties",
-    ".env.local": "properties",
-    ".env.stg": "properties",
-    ".env.prod": "properties"
-  },
-  "hediet.vscode-drawio.resizeImages": null,
-  "workspaceExplorer.workspaceStorageDirectory": "/Users/ueki/WorkSpaces",
   "gitlens.rebaseEditor.ordering": "asc",
-  "dart.openDevTools": "flutter",
+  "hadolint.cliOptions": ["--no-color"],
+  "hadolint.hadolintPath": "/opt/homebrew/bin/hadolint", // brewでinstallしている前提
+  "hediet.vscode-drawio.resizeImages": null,
   "htmltagwrap.tag": "div",
-  "window.zoomLevel": 1,
-  "vsicons.dontShowNewVersionMessage": true,
-  "git.ignoreRebaseWarning": true,
-  "diffEditor.maxComputationTime": 0,
-  "cSpell.userWords": ["Behaviour", "mufg"],
+  "markdown.extension.tableFormatter.delimiterRowNoPadding": true,
+  "markdown.extension.tableFormatter.enabled": true,
+  "markdown.extension.tableFormatter.normalizeIndentation": true,
   "mcp": {
     "inputs": [
       {
-        "type": "promptString",
-        "id": "github_token",
         "description": "GitHub Personal Access Token",
-        "password": true
+        "id": "github_token",
+        "password": true,
+        "type": "promptString"
       }
     ],
     "servers": {
+      "fetch": {
+        "args": ["mcp-server-fetch"],
+        "command": "uvx",
+        "type": "stdio"
+      },
       "filesystem": {
-        "command": "npx",
         "args": [
           "-y",
           "@modelcontextprotocol/server-filesystem",
-          "/Users/ueki/Downloads/tmp"
-        ]
+          "/Users/ueki/Downloads/mcp"
+        ],
+        "command": "npx"
       },
-      "my-mcp-server": {
+      "gdrive": {
+        "args": ["-y", "@modelcontextprotocol/server-gdrive"],
         "command": "npx",
-        "args": ["ts-node", "/Users/ueki/pg/my/my-mcp-server/src/server.ts"]
+        "env": {
+          "GDRIVE_CREDENTIALS_PATH": "/Users/ueki/pg/mcp/servers/.gdrive-server-credentials.json"
+        }
       },
       "github": {
-        "command": "npx",
         "args": ["-y", "@modelcontextprotocol/server-github"],
+        "command": "npx",
         "env": {
           "GITHUB_PERSONAL_ACCESS_TOKEN": "${input:github_token}"
         }
       },
-      "fetch": {
-        "type": "stdio",
-        "command": "uvx",
-        "args": ["mcp-server-fetch"]
+      "my-mcp-server": {
+        "args": ["ts-node", "/Users/ueki/pg/my/my-mcp-server/src/server.ts"],
+        "command": "npx"
       }
     }
   },
-  "chat.mcp.discovery.enabled": true
+  "security.workspace.trust.untrustedFiles": "open",
   // "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "terminal.integrated.enableMultiLinePasteWarning": "never",
+  "vsicons.dontShowNewVersionMessage": true,
+  "window.commandCenter": false,
+  "window.zoomLevel": 1,
+  "workbench.editorAssociations": {
+    "*.svg": "default"
+  },
+  "workbench.iconTheme": "vscode-icons",
+  "workspaceExplorer.workspaceStorageDirectory": "/Users/ueki/WorkSpaces"
 }
