--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,9 @@
 Include conf.d/hosts/*
 
+Host *
+    AddKeysToAgent yes
+    UseKeychain yes
+    IdentityFile ~/.ssh/id_ed25519
+
 Host __*
     ServerAliveInterval 60
