--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,7 @@
 Include conf.d/hosts/*
 
 Host *
-    AddKeysToAgent yes
-    UseKeychain yes
+    IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
     IdentityFile ~/.ssh/id_ed25519
 
 Host __*
