1passwordでsshキーを管理

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,7 +2,9 @@ Include conf.d/hosts/*
 
 Host *
     IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
-    # 1Passwordが利用できない場合のフォールバック用として残しておく（消しても良い）
+    # 以下は不要だが、1Passwordが利用できない場合のフォールバック用として残しておく
+    # AddKeysToAgent yes
+    # UseKeychain yes
     IdentityFile ~/.ssh/id_ed25519
 
 Host __*
