--- a/.ssh/config
+++ b/.ssh/config
@@ -1,10 +1,12 @@
 Include conf.d/hosts/*
 
 Host *
-    IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
-    # 以下は不要だが、1Passwordが利用できない場合のフォールバック用として残しておく
-    # AddKeysToAgent yes
-    # UseKeychain yes
+    # 1Passwordで管理しているキーを使用する場合
+    # IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
+
+    # ローカルPCで管理しているキーを使用する場合
+    AddKeysToAgent yes
+    UseKeychain yes
     IdentityFile ~/.ssh/id_ed25519
 
 Host __*
