--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,8 +31,14 @@
   "[tsx]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "chat.mcp.discovery.enabled": true,
+  "chat.mcp.discovery.enabled": {
+    "claude-desktop": true,
+    "cursor-global": true,
+    "cursor-workspace": true,
+    "windsurf": true
+  },
   "chat.promptFiles": true,
+  "claudeCode.preferredLocation": "panel",
   "dart.openDevTools": "flutter",
   "diffEditor.ignoreTrimWhitespace": false,
   "diffEditor.maxComputationTime": 0,
@@ -43,6 +49,7 @@
   "editor.renderWhitespace": "boundary",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "explorer.confirmPasteNative": false,
   "files.associations": {
     ".env.example": "properties",
     ".env.local": "properties",
@@ -100,7 +107,9 @@
     }
   ],
   "gitlens.rebaseEditor.ordering": "asc",
-  "hadolint.cliOptions": ["--no-color"],
+  "hadolint.cliOptions": [
+    "--no-color"
+  ],
   "hadolint.hadolintPath": "/opt/homebrew/bin/hadolint", // brewでinstallしている前提
   "hediet.vscode-drawio.resizeImages": null,
   "htmltagwrap.tag": "div",
@@ -151,6 +160,7 @@
   //   }
   // },
   "security.workspace.trust.untrustedFiles": "open",
+  "terminal.external.osxExec": "Ghostty.app",
   // "terminal.integrated.defaultProfile.windows": "Git Bash",
   "terminal.integrated.enableMultiLinePasteWarning": "never",
   "vsicons.dontShowNewVersionMessage": true,
