--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,9 +2,9 @@
 theme = tokyonight
 
 # フォント
-font-family = "JetBrains Mono"
-font-family = "BIZ UDGothic Bold"
-font-size = 15
+font-family = "JetBrainsMonoNL Nerd Font Mono"
+font-feature = -dlig
+font-size = 14
 font-thicken = true
 
 # 背景透過
@@ -17,6 +17,7 @@ unfocused-split-opacity = 0.7
 # カーソル
 cursor-opacity = 0.8
 cursor-color = ffffff
+cursor-style-blink = true
 
 # ウィンドウ
 window-padding-x = 4
@@ -28,5 +29,12 @@ window-save-state = always
 macos-titlebar-style = tabs
 macos-option-as-alt = true
 
+# クイックターミナル
+quick-terminal-position = "top"
+quick-terminal-screen = "main"
+quick-terminal-animation-duration = 0
+
 # キーバインド
-keybind = shift+enter=text:\x1b\r # Shift+Enter で改行（Claude Codeで改行するときに使っている）
+keybind = shift+enter=text:\x1b\r
+keybind = global:f12=toggle_quick_terminal
+
